test_regress/t/t_func_bad.out
%Error: t/t_func_bad.v:8: Missing argument on non-defaulted argument 'from2' in function call to FUNC 'add'
      if (add(3'd1) != 0) $stop;   
          ^~~
%Error: t/t_func_bad.v:9: Too many arguments in function call to FUNC 'add'
      if (add(3'd1, 3'd2, 3'd3) != 0) $stop;     
                          ^~~~
%Error: t/t_func_bad.v:10: Missing argument on non-defaulted argument 'y' in function call to TASK 'x'
      x;  
      ^
%Error: t/t_func_bad.v:10: Unsupported: Function output argument 'y' requires 1 bits, but connection's CONST '?32?h0' generates 32 bits.
      x;  
      ^
%Error: t/t_func_bad.v:13: No such argument 'no_such' in function call to FUNC 'f'
      f(.j(1), .no_such(2));  
                ^~~~~~~
%Error: t/t_func_bad.v:14: Duplicate argument 'dup' in function call to FUNC 'f'
      f(.dup(1), .dup(3));  
                  ^~~
%Error: t/t_func_bad.v:15: Too many arguments in function call to FUNC 'f'
      f(1,2,3);  
            ^
%Error: Exiting due to
